fixes another scrollbar ugly issue

--- a/public/stylesheets/css/style.css
+++ b/public/stylesheets/css/style.css
@@ -277,7 +277,7 @@ body.no_scroll {
 }
 .overlay-content .images-column .images-container {
   position: relative;
-  overflow-x: hidden;
+  overflow: hidden;
   width: 100%;
   height: 100%;
 }
