--- a/public/stylesheets/less/overlay.less
+++ b/public/stylesheets/less/overlay.less
@@ -61,7 +61,7 @@
 
         .images-container{
             position: relative;
-            overflow-x: hidden;
+            overflow: hidden;
             width: 100%;
             height: 100%;
 
